Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprender Desenvolvimento Web</title>
+    <style>
+        body {
+            background-color: #222222
+            color: #ffffff
+        }
+    </style>
 </head>
 <body>
     <h1>Bem-vindo ao Aprender Desenvolvimento Web</h1>
