Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Aprender Desenvolvimento Web</title>
     <style>
         body {
-            background-color: #222222
-            color: #ffffff
+            background-color: #222222;
+            color: #ffffff;
         }
     </style>
 </head>
