Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             background-color: #222222;
             color: #ffffff;
         }
+        a {
+            color: #3498db;
+        }
     </style>
 </head>
 <body>
