Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprender Desenvolvimento Web</title>
+    <title>Meu Site</title>
     <style>
         body {
             background-color: #222222;
@@ -15,8 +15,8 @@
     </style>
 </head>
 <body>
-    <h1>Bem-vindo ao Aprender Desenvolvimento Web</h1>
-    <p>Aqui você irá encontrar recursos e exemplos para aprender desenvolvimento web.</p>
+    <h1>Bem-vindo ao meu site</h1>
+    <p>Teste.</p>
     <a href="pagina2.html">Ir para a Página 2</a>
 </body>
 </html>
