Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
     <h1>Bem-vindo ao meu site</h1>
-    <p>Teste.</p>
+    <p>Teste</p>
+    <h2>Teste2</h2>
     <a href="pagina2.html">Ir para a Página 2</a>
 </body>
 </html>
