--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
             background-color: #222222;
             color: #ffffff;
         }
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
         a {
             color: #3498db;
         }
