--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         }
         a {
             color: #3498db;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -30,5 +31,6 @@
     <p>Teste</p>
     <h2>Teste2</h2>
     <a href="pagina2.html">Ir para a Página 2</a>
+     <a href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
 </body>
 </html>
