--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <p>Teste</p>
     <h2>Teste2</h2>
     <a href="pagina2.html">Ir para a Página 2</a>
-     <a href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
+    <div>
+        <h1>
+            <a href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
+        </h1>
+    </div>
 </body>
 </html>
