--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>Teste</p>
     <h2>Teste2</h2>
     <a href="pagina2.html">Ir para a Página 2</a>
-    <div>
+    <div class="container">
         <h1>
             <a href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
         </h1>
