--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             color: #3498db;
             text-decoration: none;
         }
+        .instagram-link {
+            color: #e4405f; /* Cor personalizada para o Instagram */
+        }
     </style>
 </head>
 <body>
@@ -33,7 +36,7 @@
     <a href="pagina2.html">Ir para a Página 2</a>
     <div class="container">
         <h1>
-            <a href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
+            <a class="instagram-link" href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
         </h1>
     </div>
 </body>
