--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-decoration: none;
         }
         .instagram-link {
-            color: #e4405f; /* Cor personalizada para o Instagram */
+            color: #e44562; /* Cor personalizada para o Instagram */
         }
     </style>
 </head>
