Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,26 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Meu Site</title>
-    <style>
-        body {
-            background-color: #222222;
-            color: #ffffff;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 5vh;
-        }
-        a {
-            color: #3498db;
-            text-decoration: none;
-        }
-        .instagram-link {
-            color: #e44562; /* Cor personalizada para o Instagram */
-        }
-    </style>
 </head>
 <body>
     <div class="container">
