--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="pagina2.html">Ir para a Página 2</a>
     <div class="container">
         <h1>
-            <a class="instagram-link" href="https://www.instagram.com/davi_pires_aquino/" target="_blank">Instagram</a>
+            <a class="instagram-link" href="https://www.instagram.com/davi_pires_aquino/" ></a>
         </h1>
     </div>
 </body>
