--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <a href="pagina2.html">Ir para a Página 2</a>
     <div class="container">
         <h1>
-            <a class="instagram-link" href="https://www.instagram.com/davi_pires_aquino/" ></a>
+            <a class="instagram-link" href="https://www.instagram.com/davi_pires_aquino/">
+                <img src="https://images.app.goo.gl/Kvh6YiaassztoMnQ7" alt="Instagram">
+            </a>
+        </h1>
         </h1>
     </div>
 </body>
