Atualizar o pagina2.html

--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,7 @@
     <title>Exemplo de Página</title>
 </head>
 <body>
-    <h1>Exemplo de Página</h1>
+    <h1>Exemplo de Páginaa</h1>
     <p>Esta é uma página fictícia de exemplo.</p>
     <a href="index.html">Voltar para a Página Inicial</a>
 </body>
