--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <h1>
             <a class="instagram-link" href="https://www.instagram.com/davi_pires_aquino/">
-                <img src="https://images.app.goo.gl/Kvh6YiaassztoMnQ7" alt="Instagram">
+                <img src="instagram_icon.png" alt="Instagram">
             </a>
         </h1>
         </h1>
