--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <h1>Bem-vindo ao meu site</h1>
     <p>Teste</p>
     <h2>Teste2</h2>
-    <a href="pagina2.html">Ir para a Página 2</a>
+    <a href="pagina2.html">Ir para a Pagina 2</a>
     <div class="container">
         <h1>
             <a href="https://www.instagram.com/davi_pires_aquino/">
-                <img src="instagram_icon.png" alt="Instagram">
+                <img src="Instagram_icon.png" alt="Instagram">
             </a>
         </h1>
         </h1>
