--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="pagina2.html">Ir para a Pagina 2</a>
     <div class="container">
         <h1>
-            <a claws="instagram-link"  href="https://www.instagram.com/davi_pires_aquino/">
+            <a class="instagram-link"  href="https://www.instagram.com/davi_pires_aquino/">
                 <img src="Instagram_icon.png" alt="Instagram">
             </a>
         </h1>
