--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="projects-box" onclick="expand(this)">
             Meus projetos
             <div class="about-text">
-                <a href="pagina2.html">- IA de xadrez em C</a>
+                <a href="https://github.com/DaviPac/Chess-AI">- IA de xadrez em C</a>
             </div>
             <div class="about-text">
-                <a href="pagina2.html">- Sistema de armazenamento em árvore binária</a>
+                <a href="https://github.com/DaviPac/contatos-arvore-binaria">- Sistema de armazenamento em árvore binária</a>
             </div>
             <div class="about-text">
-                <a href="pagina2.html">- Meu site</a>
+                <a href="https://github.com/DaviPac/my-site">- Meu site</a>
             </div>
         </div>
     </div>
