--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="about-box" onclick="expand(this)">
             Sobre mim
             <div class="about-text">
-                <p>
-                   Aqui vai o seu texto sobre você. Pode adicionar informações como interesses, habilidades, etc. 
-                   Aqui vai o seu texto sobre você. Pode adicionar informações como interesses, habilidades, etc. 
-                </p>
+                <h3>
+                    Estudante de Ciência da computação na Universidade Federal 
+                    Rural de Pernambuco, atualmente no primeiro período.
+                </h3>
             </div>
         </div>
     </div>
@@ -36,10 +36,10 @@
         </div>
     </div>
     <div class="container">
-        <a class="icon" href="https://www.instagram.com/davi_pires_aquino/" target="_blank">
+        <a class="insta-icon" href="https://www.instagram.com/davi_pires_aquino/" target="_blank">
             <img src="Instagram_icon.png" alt="Instagram">
         </a>
-        <a class="icon" href="https://www.linkedin.com/in/davi-pires-224b0829a" target="_blank">
+        <a class="link-icon" href="https://www.linkedin.com/in/davi-pires-224b0829a" target="_blank">
             <img src="linkedin_icon.png" alt="Linkedin">
         </a>
     </div>
