--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
         </div>
     </div>
     <div class="container">
-        <div class="projects-box" onclick="expand(this)">
-            Meus projetos
-            <div class="about-text">
-                <a href="https://github.com/DaviPac/Chess-AI">- IA de xadrez em C</a>
-            </div>
-            <div class="about-text">
-                <a href="https://github.com/DaviPac/contatos-arvore-binaria">- Sistema de armazenamento em árvore binária</a>
-            </div>
-            <div class="about-text">
-                <a href="https://github.com/DaviPac/my-site">- Meu site</a>
-            </div>
+        <div class="projects-box">
+            <details>
+                <summary>Meus projetos</summary>
+                    <ul>
+                        <li>
+                            <a href="https://github.com/DaviPac/Chess-AI">- IA de xadrez em C</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/DaviPac/contatos-arvore-binaria">- Sistema de armazenamento em árvore binária</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/DaviPac/my-site">- Meu site</a>
+                        </li>
+                    </ul>
+            </details>
         </div>
     </div>
     <div class="container">
