--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <summary>Meus projetos</summary>
                     <ul>
                         <li>
-                            <a href="https://github.com/DaviPac/Chess-AI">- IA de xadrez em C</a>
+                            <a href="https://github.com/DaviPac/Chess-AI" target="_blank">- IA de xadrez em C</a>
                         </li>
                         <li>
-                            <a href="https://github.com/DaviPac/contatos-arvore-binaria">- Sistema de armazenamento em árvore binária</a>
+                            <a href="https://github.com/DaviPac/contatos-arvore-binaria" target="_blank">- Sistema de armazenamento em árvore binária</a>
                         </li>
                         <li>
-                            <a href="https://github.com/DaviPac/my-site">- Meu site</a>
+                            <a href="https://github.com/DaviPac/my-site" target="_blank">- Meu site</a>
                         </li>
                     </ul>
             </details>
