--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Sobre mim
             <div class="about-text">
                 <h3>
-                    Estudante de Ciência da computação na Universidade Federal 
+                    Sou Davi Pires, estudante de Ciência da computação na Universidade Federal 
                     Rural de Pernambuco, atualmente no primeiro período.
                 </h3>
             </div>
