--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="container">
         <div class="about-box" onclick="expand(this)">
-            Sobre mim
+            <h1>Sobre mim</h1>
             <div class="about-text">
                 <h3>
                     Sou Davi Pires, estudante de Ciência da computação na Universidade Federal 
