--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     </div>
     <div class="container">
         <div class="about-box" onclick="expand(this)">
-            <h1>Sobre mim</h1>
+            Sobre mim
             <div class="about-text">
+                <h1>
                     Sou Davi Pires, estudante de Ciência da computação na Universidade Federal 
                     Rural de Pernambuco, atualmente no primeiro período.
+                </h1>
             </div>
         </div>
     </div>
