Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
         <h1>Bem vindo ao meu site!</h1>
     </div>
     <div class="container">
-        <div class="about-box" onclick="expand(this)">
-            Sobre mim
-            <div class="about-text">
-                <h1>
+        <div class="about-box">
+            <details>
+                <summary>
+                    Sobre mim
+                </summary>
+                <div class="about-text">
+                    <h2>
                     Sou Davi Pires, estudante de Ciência da computação na Universidade Federal 
                     Rural de Pernambuco, atualmente no primeiro período.
-                </h1>
-            </div>
+                    </h2>
+                </div>
+            </details>
         </div>
     </div>
     <div class="container">
