--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
     <div class="container">
         <div class="about-box">
             <details>
-                <summary>
-                    Sobre mim
-                </summary>
+                <summary>Sobre mim</summary>
                 <ul>
-                    <li>
-                        <h3>
-                            Sou Davi Pires, estudante de Ciência da computação na Universidade Federal 
-                            Rural de Pernambuco, atualmente no primeiro período.
-                        </h3>
-                    </li>
+                    <h3>
+                        Estudante de Ciência da computação na Universidade Federal 
+                        Rural de Pernambuco, atualmente no primeiro período.
+                    </h3>
                 </ul>
             </details>
         </div>
