--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#b39607">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Meu Site</title>
 </head>
