--- a/1.html
+++ b/1.html
@@ -23,7 +23,7 @@
         <label for ="question3">Qual é o momento preferido do dia? (manhã/tarde/noite)</label>
         <input type="text" id="question3" name="question3" required>
 
-        <a href="davipac.github.io/my-site/2">próximo</a>
+        <a href="2">próximo</a>
     </form>
 </body>
 </html>
