--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <label for="idade">Idade:</label>
         <input type="text" id="idade" name="idade" required>
 
-        <a href="davipac.github.io/my-site/1">Iniciar teste</a>
+        <a href="1">Iniciar teste</a>
     </form>
 </body>
 </html>
