--- a/result.html
+++ b/result.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Resultado do teste de personalidade MBTI</h1>
-    <img src="esfj.jpg" alt="ESFJ" width="150" height="150">
+    <div>
+        <img src="esfj.jpg" alt="ESFJ">
+    </div>    
 </body>
 </html>
