--- a/2.html
+++ b/2.html
@@ -9,18 +9,18 @@
 <body>
     <h1>Teste de personalidade MBTI</h1>
     <form id="questionForm">
-        <label for="nome">Você está mais inclinado(a) à área de exatas, humanas ou biológicas?:</label>
+        <label for="nome">Você está mais inclinado(a) à área de exatas, humanas ou biológicas?</label>
         <input type="text" id="nome" name="nome" required>
 
-        <label for="cor">Qual é a sua cor favorita:</label>
+        <label for="cor">Qual é a sua cor favorita?</label>
         <input type="text" id="cor" name="cor" required>
 
-        <label for="question1">Você se considera introvertido(a) ou extrovertido(a):</label>
+        <label for="question1">Você se considera introvertido(a) ou extrovertido(a)?</label>
         <input type="text" id="question1" name="question1" required>
 
-        <label for="anel">Qual a numeração/tamanho do seu dedo anelar da mão direita:</label>
+        <label for="anel">Qual o tamanho em milímetros do seu dedo anelar da mão direita?</label>
         <input type="text" id="anel" name="anel" required>
-        <label for ="question3">Qual é o seu animal favorito:</label>
+        <label for ="question3">Qual é o seu animal favorito?</label>
         <input type="text" id="question3" name="question3" required>
 
         <button type="button" onclick="sendEmail()">Enviar</button>
