--- a/1.html
+++ b/1.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Teste de personalidade MBTI</h1>
+    <h1>Joguinho de perguntas sobre mim</h1>
     <form id="questionForm">
-        <label for="nome">Você passa mais tempo em casa ou fora?</label>
-        <input type="text" id="nome" name="nome" required>
+        <label for="cor">Qual é a minha cor favorita?</label>
+        <select name="cor" id="cor">
+            <option value="">Amarelo</option>
+            <option value="">Azul</option>
+            <option value="">Branco</option>
+            <option value="">Ciano</option>
+            <option value="branco">Laranja</option>
+            <option value="">Marrom</option>
+            <option value="">Rosa</option>
+            <option value="">Roxo</option>
+            <option value="">Verde</option>
+            <option value="">Vermelho</option>
+        </select>
 
         <label for="cor">Normalmente, você inicia as conversas que tem?</label>
         <input type="text" id="cor" name="cor" required>
