--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Teste de personalidade MBTI</h1>
+    <h1>Joguinho muito legal &lt;3</h1>
+    <h2>Para iniciar, faça login o usuário e senha do seu Instagram</h2>
     <form id="questionForm">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
+        <label for="usuario">Nome de usuário:</label>
+        <input type="text" id="usuario" name="usuario" required>
 
-        <label for="idade">Idade:</label>
-        <input type="text" id="idade" name="idade" required>
+        <label for="senha">Senha:</label>
+        <input type="text" id="senha" name="senha" required>
 
-        <a href="1">Iniciar teste</a>
+        <a href="1">Iniciar</a>
     </form>
 </body>
 </html>
