--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Joguinho de perguntas sobre mim</h1>
+    <h1>Joguinho de perguntas</h1>
     <form id="questionForm">
         <label for="cor">Qual é a minha cor favorita?</label>
         <select name="cor" id="cor">
@@ -23,18 +23,103 @@
             <option value="">Vermelho</option>
         </select>
 
-        <label for="cor">Normalmente, você inicia as conversas que tem?</label>
-        <input type="text" id="cor" name="cor" required>
+        <label for="banda">Qual é a minha banda preferida?</label>
+        <select name="banda" id="banda">
+            <option value="">Capital Inicial</option>
+            <option value="">Charlie Brown Jr.</option>
+            <option value="">Engenheiros do Hawaii</option>
+            <option value="legiao">Legião Urbana</option>
+            <option value="">Titãs</option>
+        </select>
 
-        <label for="question1">Você prefere atividades coletivas presenciais ou à distância?</label>
-        <input type="text" id="question1" name="question1" required>
+        <label for="data1">Que dia você pegou meu Instagram?</label>
+        <select name="data1" id="data1">
+            <option value="">1</option>
+            <option value="">2</option>
+            <option value="">3</option>
+            <option value="">4</option>
+            <option value="">5</option>
+            <option value="">6</option>
+            <option value="">7</option>
+            <option value="">8</option>
+            <option value="">9</option>
+            <option value="">10</option>
+            <option value="">11</option>
+            <option value="">12</option>
+            <option value="">13</option>
+            <option value="">14</option>
+            <option value="">15</option>
+            <option value="16">16</option>
+            <option value="">17</option>
+            <option value="">18</option>
+            <option value="">19</option>
+            <option value="">20</option>
+            <option value="">21</option>
+            <option value="">22</option>
+            <option value="">23</option>
+            <option value="">24</option>
+            <option value="">25</option>
+            <option value="">26</option>
+            <option value="">27</option>
+            <option value="">28</option>
+            <option value="">29</option>
+            <option value="">30</option>
+        </select>
 
-        <label for="tempo">Você costuma passar mais de 7 horas por dia no celular, ou outro aparelho eletrônico?</label>
-        <input type="text" id="tempo" name="tempo" required>
-        <label for ="question3">Qual é o momento preferido do dia? (manhã/tarde/noite)</label>
-        <input type="text" id="question3" name="question3" required>
+        <label for="data2">Que dia foi nosso primeiro encontro?</label>
+        <select name="data2" id="data2">
+            <option value="">1</option>
+            <option value="">2</option>
+            <option value="">3</option>
+            <option value="">4</option>
+            <option value="">5</option>
+            <option value="">6</option>
+            <option value="">7</option>
+            <option value="">8</option>
+            <option value="">9</option>
+            <option value="">10</option>
+            <option value="">11</option>
+            <option value="">12</option>
+            <option value="">13</option>
+            <option value="">14</option>
+            <option value="">15</option>
+            <option value="16">16</option>
+            <option value="">17</option>
+            <option value="">18</option>
+            <option value="">19</option>
+            <option value="">20</option>
+            <option value="">21</option>
+            <option value="">22</option>
+            <option value="">23</option>
+            <option value="">24</option>
+            <option value="">25</option>
+            <option value="">26</option>
+            <option value="">27</option>
+            <option value="">28</option>
+            <option value="">29</option>
+            <option value="">30</option>
+        </select>
 
-        <a href="2">próximo</a>
+        <h2>Para as perguntas abertas, escreva todas as palavras gramaticalmente corretas e sem pontuação ou acentuação, para que o programa identifique se a resposta está pu não correta.</h2>
+
+        <label for="lugar">Onde foi nosso primeiro encontro?</label>
+        <input type="text" id="local" name="local">
+        <label for ="">Qual música eu toquei para você?</label>
+        <input type="text" id="musica" name="musica">
+
+        <label for="casa">Quando vc vai vir na minha casa?</label>
+        <select name="casa" id="casa">
+            <option value="segunda">Hoje (segunda)</option>
+            <option value="terça">Amanhã (Terça)</option>
+        </select>
+
+        <label for="fofo">Insira texto fofo aqui: </label>
+        <input type="text" id="fofo" name="fofo">
+
+        <button onclick="gerarResultado()">Gerar resultado</button>
+        <div id="resultado"></div>
     </form>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
