--- a/1.html
+++ b/1.html
@@ -100,7 +100,7 @@
             <option value="">30</option>
         </select>
 
-        <h2>Para as perguntas abertas, escreva todas as palavras gramaticalmente corretas e sem pontuação ou acentuação, para que o programa identifique se a resposta está ou não correta.</h2>
+        <h2>Para as perguntas abertas, escreva todas as palavras gramaticalmente corretas e sem pontuação ou acentuação, e tudo em minúsculo, para que o programa identifique se a resposta está ou não correta.</h2>
 
         <label for="lugar">Onde foi nosso primeiro encontro?</label>
         <input type="text" id="local" name="local">
