--- a/campeonatos.html
+++ b/campeonatos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clube de Tênis de Mesa Pingas</title>
+    <title>Campeonatos - Clube de Tênis de Mesa Pingas</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -15,8 +15,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Início</a></li>
-                <li><a href="campeonatos.html">Campeonatos</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="campeonatos.html" class="active">Campeonatos</a></li>
                 <li><a href="ranking.html">Ranking</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="login.html" class="btn-login">Login</a></li>
@@ -26,39 +26,14 @@
     </header>
 
     <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Bem-vindo ao Clube de Tênis de Mesa Pingas</h2>
-                <p>Junte-se à nossa comunidade de entusiastas do tênis de mesa!</p>
-                <a href="cadastro.html" class="btn">Torne-se um Membro</a>
-            </div>
-        </section>
-
-        <section class="features">
-            <div class="feature-card">
-                <i class="fas fa-trophy"></i>
-                <h3>Campeonatos</h3>
-                <p>Participe de campeonatos organizados regularmente para todos os níveis.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-table-tennis"></i>
-                <h3>Partidas Amistosas</h3>
-                <p>Organize partidas com outros membros e melhore suas habilidades.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-medal"></i>
-                <h3>Ranking</h3>
-                <p>Acompanhe sua posição no ranking do clube e evolua constantemente.</p>
-            </div>
-        </section>
-
-        <section class="upcoming-events">
-            <h2>Próximos Eventos</h2>
-            <div class="event-list" id="event-list">
-                <!-- Eventos serão carregados via JavaScript -->
-                <p class="loading">Carregando eventos...</p>
-            </div>
-        </section>
+        <div class="tournament-list" id="tournament-list">
+            <!-- Conteúdo será carregado via JavaScript -->
+            <p class="loading">Carregando campeonatos...</p>
+        </div>
+        
+        <div id="tournament-container" class="tournament-container">
+            <!-- Detalhes do torneio serão carregados aqui quando um torneio específico for selecionado -->
+        </div>
     </main>
 
     <footer>
