--- a/index.html
+++ b/index.html
@@ -5,41 +5,10 @@
   <title>Login</title>
 </head>
 <body>
-  <h2>Login</h2>
-  <form id="loginForm">
-    <label>Usuário:</label><br />
-    <input type="text" id="username" /><br /><br />
-    
-    <label>Senha:</label><br />
-    <input type="password" id="password" /><br /><br />
-    
-    <button type="submit">Entrar</button>
-  </form>
-
-  <p id="resultado"></p>
-
-  <script>
-    document.getElementById('loginForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
-
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-
-      const response = await fetch('https://testesitebackend.fly.dev/login', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ username, password })
-      });
-
-      if (response.status === 401) {
-        document.getElementById('resultado').textContent = '❌ Usuário ou senha incorretos.';
-      } else if (response.ok) {
-        const data = await response.json();
-        document.getElementById('resultado').textContent = '✅ Login bem-sucedido!';
-      } else {
-        document.getElementById('resultado').textContent = '⚠️ Erro ao conectar com o servidor.';
-        }
-    });
-  </script>
+    <div class="auth-links">
+        <a href="login.html" class="login-link">Login</a>
+        <span class="divider">|</span>
+        <a href="register.html" class="register-link">Register</a>
+    </div>
 </body>
 </html>
