--- a/login.html
+++ b/login.html
@@ -18,6 +18,10 @@
 
   <p id="resultado"></p>
 
+  <a href="register.html">Ainda não é cadastrado? Registre-se</a>
+
+  <a href="index.html">Voltar</a>
+
   <script>
     document.getElementById('loginForm').addEventListener('submit', async function(e) {
       e.preventDefault();
