--- a/register.html
+++ b/register.html
@@ -18,6 +18,10 @@
 
   <p id="resultado"></p>
 
+  <a href="login.html">Já é cadastrado? Faça login</a>
+
+  <a href="index.html">Voltar</a>
+
   <script>
     document.getElementById('registerForm').addEventListener('submit', async function(e) {
       e.preventDefault();
