--- a/register.html
+++ b/register.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Login</title>
+  <title>Register</title>
 </head>
 <body>
-  <h2>Login</h2>
+  <h2>Register</h2>
   <form id="registerForm">
     <label>Usuário:</label><br />
     <input type="text" id="username" /><br /><br />
