--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="auth-links">
+      <h1>Voce está logado!</h1>
         <a href="login.html" class="login-link">Login</a>
         <span class="divider">|</span>
         <a href="register.html" class="register-link">Register</a>
