--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <span class="divider">|</span>
         <a href="register.html" class="register-link">Register</a>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
